k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-optimization
  namespace: cv-rag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cv-optimization
  template:
    metadata:
      labels:
        app: cv-optimization
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: cv-optimization
          image: bazzmx/cv-optimization:dev
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /data/chroma
              name: chroma-storage
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      volumes:
        - name: chroma-storage
          persistentVolumeClaim:
            claimName: chroma-pvc
