k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-rag-ingress
  namespace: cv-rag
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  ingressClassName: traefik
  rules:
    - host: cv-rag.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cv-rag-service
                port:
                  number: 80
